--- a/src/components/list/TodayCss.css
+++ b/src/components/list/TodayCss.css
@@ -8,45 +8,15 @@
     background-clip: padding-box;
     padding-left: 20px;
   }
-
-  @media (max-width: 1200px) {
-    .my-masonry-grid {
-      transform: translateX(-140px);
-      margin-left: 100px; /* gutter size offset */
-    }
+   
+  @media (max-width: 768px) {
+    
     .my-masonry-grid_column {
-        padding-left: 10px;
+        padding-left: 65px;
       
     }
     .my-masonry-grid_column > div {
-      margin-bottom: 15px; /* space between items */
+      margin-bottom: 15px; 
     }
-  }
-
-  @media (max-width: 1100px) {
-    .my-masonry-grid {
-      transform: translateX(-240px);
-      margin-left: 260px; /* gutter size offset */
-    }
-    .my-masonry-grid_column {
-        padding-left: 10px;
-      
-    }
-    .my-masonry-grid_column > div {
-      margin-bottom: 15px; /* space between items */
-    }
-  }
+  } 
  
-  @media (max-width: 800px) {
-    .my-masonry-grid {
-      transform: translateX(-480px);
-      margin-left: 480px; /* gutter size offset */
-    }
-    .my-masonry-grid_column {
-        padding-left: 10px;
-      
-    }
-    .my-masonry-grid_column > div {
-      margin-bottom: 15px; /* space between items */
-    }
-  }
