--- a/src/components/list/TodayCss.css
+++ b/src/components/list/TodayCss.css
@@ -19,4 +19,26 @@
       margin-bottom: 15px; 
     }
   } 
+
+  @media (max-width: 414px) {
+    
+    .my-masonry-grid_column {
+        padding-left: 0px;
+      
+    }
+    .my-masonry-grid_column > div {
+      margin-bottom: 15px; 
+    }
+  } 
+
+  @media (max-width: 360px) {
+    
+    .my-masonry-grid_column {
+        padding-left: 0px;
+      
+    }
+    .my-masonry-grid_column > div {
+      margin-bottom: 15px; 
+    }
+  } 
  
