--- a/src/css/MobileSearchCss.css
+++ b/src/css/MobileSearchCss.css
@@ -2,17 +2,17 @@
     display: -webkit-box; /* Not needed if autoprefixing */
     display: -ms-flexbox; /* Not needed if autoprefixing */
     display: flex;
-    width: auto;
+    width: 90%;
   }
   .my-masonry-grid_column {
     background-clip: padding-box;
-    padding-left: 100px;
+    padding-left: 20px;
   }
    
   @media (max-width: 768px) {
     
     .my-masonry-grid_column {
-        padding-left: 65px;
+        padding-left: 20px;
       
     }
     .my-masonry-grid_column > div {
@@ -31,7 +31,7 @@
     }
   } 
 
-  @media (max-width: 360px) {
+  @media (max-width: 375px) {
     
     .my-masonry-grid_column {
         padding-left: 0px;
