--- a/src/css/WantCss.css
+++ b/src/css/WantCss.css
@@ -3,6 +3,7 @@ button.rec-dot {
     background-color:rgba(255, 198, 0, 1);
     opacity: 0.5;
     box-shadow:0 0 1px 3px rgba(245, 147, 48, 0.5) !important;
+
   }
   
   button.rec-dot:hover, button.rec-dot:active, button.rec-dot:focus {
@@ -13,6 +14,10 @@ button.rec-arrow {
     background-color:rgba(255, 198, 0, 1);
     opacity: 0.5;
     box-shadow:0 0 1px 3px rgba(245, 147, 48, 0.5) !important;
+
+    @media (max-width: 768px) {
+      display: none;
+    }
   }
   
   button.rec-arrow:hover, button.rec-arrow:active, button.rec-arrow:focus {
